--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/SoftSell-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="SoftSell helps businesses sell unused software licenses quickly and at the best possible price. Get top value for your unused licenses today." />
     <meta name="keywords" content="software resale, license resale, software marketplace, sell software licenses" />
